<resources>
    <string name="app_name">Spendy</string>
    <string name="theme">Theme</string>
    <string name="currency">Currency:</string>
    <string name="settings">Settings</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="price">Price:</string>
    <string name="input_price">price</string>
    <string name="item">Item:</string>
    <string name="input_item">name</string>
    <string name="input_quantity">quantity</string>
    <string name="calculate">Calculate</string>
    <string name="save">Save</string>
    <string name="category">Category:</string>
    <string name="language">Language</string>
    <string name="recents">Recents</string>
    <string name="averages">Averages</string>
    <string name="summary">Summary</string>
    <string name="search">Search</string>
    <string name="addItem">Add Item</string>
    <string name="addCategory">Add Category</string>
    <string name="name">Name</string>
    <string name="budget">Budget</string>
    <string-array name="languages">
        <item>English</item>
        <item>한국어</item>
        <item>中文</item>
        <item>日本語</item>
    </string-array>
    <string-array name="themes">
        <item>Dark</item>
        <item>Light</item>
        <item>Green</item>
    </string-array>
    <string-array name="currencies">
        <item>USD</item>
        <item>KRW</item>
        <item>RMB</item>
        <item>JPY</item>
    </string-array>
    <string-array name="categories">
        <item>Groceries</item>
        <item>Restaurants</item>
        <item>Alcohol</item>
        <item>Transportation</item>
    </string-array>
    <string-array name="groceries">
        <item>Chicken</item>
        <item>Rice</item>
        <item>Eggs</item>
        <item>Potatoes</item>
        <item>Spinach</item>
        <item>Broccoli</item>
        <item>Bell Peppers</item>
        <item>Garlic</item>
        <item>Spices</item>
        <item>Avocados</item>
        <item>Cheese</item>
        <item>Pasta</item>
    </string-array>
    <string-array name="restaurants">
        <item>Martin\'s</item>
        <item>Lim\'s</item>
        <item>Joe\'s</item>
        <item>Noodle Tree</item>
        <item>Papa John\'s</item>
        <item>Marie Martha\'s</item>
        <item>Nigo Ramen</item>
        <item>Beigel Cafe</item>
    </string-array>
    <string-array name="alcohol">
        <item>House Wine</item>
        <item>Bottled Wine</item>
        <item>Beer</item>
        <item>Mixed Drink</item>
    </string-array>
    <string-array name="transportation">
        <item>Taxi</item>
        <item>Bus</item>
        <item>Subway</item>
    </string-array>
    <string-array name="quantity">
        <item>Quantity</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
